--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -13,3 +13,10 @@
   margin: 20px;
   cursor: pointer;
 }
+
+
+.components-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
