--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -18,5 +18,6 @@
 .components-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 15px;
 }
