--- a/src/components/chart/Chart.css
+++ b/src/components/chart/Chart.css
@@ -1,9 +1,15 @@
 .item-chart{
   min-width: 20%;
-  height: 100px;
+  min-height: 100px;
   background: #fff;
   text-align: center;
   font-size: 20px;
   padding: 15px;
   margin-bottom: 20px;
+}
+
+img{
+  display: block;
+  margin: auto;
+  border-radius: 50%;
 }
